try to fix compiler 4