@@ -45,21 +45,16 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.2.2</version>
-<!--                    <configuration>-->
-<!--                        <testFailureIgnore>true</testFailureIgnore>-->
-<!--                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
-<!--                        <reuseForks>false</reuseForks>-->
-<!--                    </configuration>-->
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.11.0</version>
-                    <configuration>
-                        <source>6</source>
-                        <target>6</target>
-                    </configuration>
+<!--                    <configuration>-->
+<!--                        <source>6</source>-->
+<!--                        <target>6</target>-->
+<!--                    </configuration>-->
                 </plugin>
 
             </plugins>
